fix scrollbar

--- a/css/index.css
+++ b/css/index.css
@@ -2,11 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: fantasy;
+    font-family: system-ui;
 }
 
 body {
-    font-family: Arial, sans-serif;
     background: #f8f8f8;
     padding-top: 60px;
     align-items: center;
